--- a/base-one/trunk/src/org/hsqldb/sample/sample-hsqldb.cfg
+++ b/base-one/trunk/src/org/hsqldb/sample/sample-hsqldb.cfg
@@ -1,4 +1,4 @@
-# $Id: sample-hsqldb.cfg,v 1.3 2004/06/08 05:42:23 unsaved Exp $
+# $Id: sample-hsqldb.cfg,v 1.4 2004/06/11 04:25:43 unsaved Exp $
 
 # Sample configuration file for HSQLDB database server.
 # See the "UNIX Quick Start" chapter of the Hsqldb User Guide.
@@ -30,6 +30,11 @@ SERVER_HOME=/home/blaine/db
 # (The shutdown client is always run as root or the invoker of the init script).
 # Runs as root by default, but you should take the time to set database file
 # ownerships to another user and set that user name here.
+# You do need to run as root if your Server/WebServer will run on a privileged
+# (< 1024) port.
+# If you really do want to run as root, comment out the HSQLDB_OWNER setting
+# completely.  I.e., do not set it to root.  This will run Server/Webserver
+# without any "su" at all.
 HSQLDB_OWNER=blaine
 
 # We require all Server/WebServer instances to be accessible within 
