--- a/base-one/trunk/src/org/hsqldb/sample/sample-hsqldb.cfg
+++ b/base-one/trunk/src/org/hsqldb/sample/sample-hsqldb.cfg
@@ -1,4 +1,4 @@
-# $Id: sample-hsqldb.cfg,v 1.4 2004/06/11 04:25:43 unsaved Exp $
+# $Id: sample-hsqldb.cfg,v 1.5 2004/06/29 15:32:40 unsaved Exp $
 
 # Sample configuration file for HSQLDB database server.
 # See the "UNIX Quick Start" chapter of the Hsqldb User Guide.
@@ -23,7 +23,7 @@ JAVA_EXECUTABLE=/usr/java/j2sdk1.4.2_02/bin/java
 # software base directory.
 HSQLDB_JAR_PATH=/home/blaine/hsqldb-dev/lib/hsqldb.jar
 
-# Where the file "server.properties" resides.
+# Where the file "server.properties" (or "webserver.properties") resides.
 SERVER_HOME=/home/blaine/db
 
 # What UNIX user the server will run as.
