--- a/base-one/trunk/src/org/hsqldb/sample/sample-hsqldb.cfg
+++ b/base-one/trunk/src/org/hsqldb/sample/sample-hsqldb.cfg
@@ -1,4 +1,4 @@
-# $Id: sample-hsqldb.cfg,v 1.5 2004/06/29 15:32:40 unsaved Exp $
+# $Id: sample-hsqldb.cfg,v 1.6 2004/06/29 15:49:47 unsaved Exp $
 
 # Sample configuration file for HSQLDB database server.
 # See the "UNIX Quick Start" chapter of the Hsqldb User Guide.
@@ -26,7 +26,7 @@ HSQLDB_JAR_PATH=/home/blaine/hsqldb-dev/lib/hsqldb.jar
 # Where the file "server.properties" (or "webserver.properties") resides.
 SERVER_HOME=/home/blaine/db
 
-# What UNIX user the server will run as.
+# What UNIX user the Server/WebServer process will run as.
 # (The shutdown client is always run as root or the invoker of the init script).
 # Runs as root by default, but you should take the time to set database file
 # ownerships to another user and set that user name here.
@@ -81,8 +81,6 @@ HSQLDB_OWNER=blaine
 
 # Any JVM args for the invocation of the JDBC client used to verify DB
 # instances and to shut them down (SqlToolSprayer).
-# This example specifies the location of a private trust store for TLS 
-# encryption.
 # For multiple args, put quotes around entire value.
 #CLIENT_JVMARGS=-Djavax.net.debug=ssl
 
