Documented SU_ECHO_SECS setting

--- a/base-one/trunk/src/org/hsqldb/sample/sample-hsqldb.cfg
+++ b/base-one/trunk/src/org/hsqldb/sample/sample-hsqldb.cfg
@@ -1,4 +1,4 @@
-# $Id: sample-hsqldb.cfg,v 1.6 2004/06/29 15:49:47 unsaved Exp $
+# $Id: sample-hsqldb.cfg,v 1.7 2004/06/29 15:53:17 unsaved Exp $
 
 # Sample configuration file for HSQLDB database server.
 # See the "UNIX Quick Start" chapter of the Hsqldb User Guide.
@@ -42,6 +42,8 @@ HSQLDB_OWNER=blaine
 # Defaults to 60.
 # Raise this is you are running lots of DB instances or have a slow server.
 #MAX_START_SECS=200
+# Ditto for this one
+#SU_ECHO_SECS=1
 
 # Time to allow for JVM to die after all HSQLDB instances stopped.
 # Defaults to 1.
