Document new setting 'SERVER_ADDL_CLASSPATH'

--- a/base-one/trunk/src/org/hsqldb/sample/sample-hsqldb.cfg
+++ b/base-one/trunk/src/org/hsqldb/sample/sample-hsqldb.cfg
@@ -1,4 +1,4 @@
-# $Id: sample-hsqldb.cfg,v 1.7 2004/06/29 15:53:17 unsaved Exp $
+# $Id: sample-hsqldb.cfg,v 1.8 2004/07/12 15:48:43 unsaved Exp $
 
 # Sample configuration file for HSQLDB database server.
 # See the "UNIX Quick Start" chapter of the Hsqldb User Guide.
@@ -69,6 +69,14 @@ HSQLDB_OWNER=blaine
 # Set to 'WebServer' to start a HSQLDB WebServer instead of a Server.
 # Defaults to 'Server'.
 #TARGET_CLASS=WebServer
+
+# Server-side classpath IN ADDITION TO the HSQLDB_JAR_PATH set above.
+# The classpath here is *earlier* than HSQLDB_JAR_PATH, to allow you 
+# override classes in the HSQLDB_JAR_PATH jar file.
+# In particular, you will want to add classpath elements to give access of
+# all of your store procedures (store procedures are documented in the 
+# HSQLDB User Guide in the SQL Syntax chapter.
+# SERVER_ADDL_CLASSPATH=/home/blaine/storedprocs.jar:/usr/dev/dbutil/classes
 
 # For TLS encryption for your Server, set these two variables.
 # N.b.:  If you set these, then make this file unreadable to non-root users!!!!
