--- a/base-one/trunk/src/org/hsqldb/sample/sqltool.rc
+++ b/base-one/trunk/src/org/hsqldb/sample/sqltool.rc
@@ -1,4 +1,4 @@
-# $Id: sqltool.rc,v 1.9 2004/07/18 14:03:33 unsaved Exp $
+# $Id: sqltool.rc,v 1.10 2004/07/18 14:15:41 unsaved Exp $
 
 # This is a sample SqlTool configuration file, a.k.a. rc file.
 
@@ -69,9 +69,9 @@ password
 # "java -jar .../hsqlsqltool.jar...".
 # Put both the HSQLDB jar and the Postgresql jar in your classpath (and
 # export!) and run something like "java org.hsqldb.util.SqlTool...".
-# N.b.:  I notice that Postgresql refuses to process many DDL commands if
-# you are in a transaction.  If you get a message "... cannot run inside
-# a transaction block", just run "commit;" and retry.
+# N.b.:  I notice that Postgresql is unusual in that it does not do an
+# implicit commit before DDL commands.  If you get an error message 
+# "... cannot run inside a transaction block", just run "commit;" and retry.
 
 #urlid commerce
 #url jdbc:postgresql://dbsvr2/commercedb
