Updating database information facility re: new schema/role facility

--- a/base-one/trunk/src/org/hsqldb/resources/table-remarks.properties
+++ b/base-one/trunk/src/org/hsqldb/resources/table-remarks.properties
@@ -22,7 +22,7 @@ SYSTEM_SUPERTABLES=the table hierarchies defined in this database. Only the imme
 SYSTEM_TABLEPRIVILEGES=the visible user level access permissions for each accessible table defined within this database
 SYSTEM_TABLES=the accessible tables defined within this database
 SYSTEM_TABLETYPES=the types of tables that can be created/found within this database
-SYSTEM_TEXTTABLES=the data source descriptors of the accessibleTEXT TABLE objects defined within this database
+SYSTEM_TEXTTABLES=the data source descriptors of the accessible TEXT TABLE objects defined within this database
 SYSTEM_TRIGGERS=the visible triggers defined within this database
 SYSTEM_TRIGGERCOLUMNS=the column usage of visible triggers defined within this database
 SYSTEM_TYPEINFO=a description of predefined table column data types known to this database
@@ -43,3 +43,8 @@ SYSTEM_USAGE_PRIVILEGES=one row for each usage privilege descriptor.
 SYSTEM_VIEW_COLUMN_USAGE=one row for each column of a table that is explicitly or implicitly referenced in the <query expression> of the view being described.
 SYSTEM_VIEW_ROUTINE_USAGE=one row for each SQL-invoked routine identified as the subject routine of either a <routine invocation>, a <method reference>, a <method invocation>, or a <static method invocation> contained in a <view definition>
 SYSTEM_VIEW_TABLE_USAGE=one row for each table identified by a <table name> simply contained in a <table reference> that is contained in the <query expression> of a view
+# since 1.8.0
+SYSTEM_AUTHORIZATIONS=one row for each user and one row for each role 
+SYSTEM_COLLATIONS=one row for each character collation descriptor.
+SYSTEM_ROLE_AUTHORIZATION_DESCRIPTORS=one row for each role granted directly to a grantee
+SYSTEM_SCHEMATA=one row for each schema.
