Updating database information facility re: new schema/role facility

--- a/base-one/trunk/src/org/hsqldb/resources/column-remarks.properties
+++ b/base-one/trunk/src/org/hsqldb/resources/column-remarks.properties
@@ -71,20 +71,23 @@ SYSTEM_BYTECODE_OPERANDS=instruction operands
 SYSTEM_BYTECODE_OPERANDS_DESCRIPTION=a human-readable description of instruction operands
 SYSTEM_BYTECODE_INSTRUCTION_DESCRIPTION=a human-readable description of whole instruction
 # SYSTEM_CACHEINFO
-SYSTEM_CACHEINFO_CACHE_CLASS=FQN of the Java Class implementing the cache
-SYSTEM_CACHEINFO_CACHE_HASH=the in-memory hashCode() of the Cache object
+#SYSTEM_CACHEINFO_CACHE_CLASS=FQN of the Java Class implementing the cache
+#SYSTEM_CACHEINFO_CACHE_HASH=the in-memory hashCode() of the Cache object
 SYSTEM_CACHEINFO_CACHE_FILE=absolute path of the file underlying the cache object
-SYSTEM_CACHEINFO_CACHE_LENGTH=length of the cache object's row data array
+#SYSTEM_CACHEINFO_CACHE_LENGTH=length of the cache object's row data array
+SYSTEM_CACHEINFO_MAX_CACHE_COUNT=maximum number of rows that will be buffered in memory by this cache
+SYSTEM_CACHEINFO_MAX_CACHE_BYTES=approximate maximum size, in bytes, of row data that will be buffered in memory by this cache
 SYSTEM_CACHEINFO_CACHE_SIZE=number of rows currently cached
-SYSTEM_CACHEINFO_FREE_BYTES=sum of all allocation units available for reuse
-SYSTEM_CACHEINFO_SMALLEST_FREE_ITEM=smallest allocation unit available for reuse
-SYSTEM_CACHEINFO_LARGEST_FREE_ITEM=largest allocation unit available for reuse
-SYSTEM_CACHEINFO_FREE_COUNT=number of allocation units available for reuse
-SYSTEM_CACHEINFO_FREE_POS=one greater than largest file position known to be allocated
-SYSTEM_CACHEINFO_MAX_CACHE_SIZE=maximum allowable cached Row objects
-SYSTEM_CACHEINFO_MAX_CACHE_BYTE_SIZE=limit on memory consumption of cached Row objects
-SYSTEM_CACHEINFO_MULTIPLIER_MASK=binary mask used to calculate indices into row data array
-SYSTEM_CACHEINFO_WRITER_LENGTH=length of row write buffer array
+SYSTEM_CACHEINFO_CACHE_BYTES=approximate number of row data bytes currently cached
+SYSTEM_CACHEINFO_FILE_FREE_BYTES=aggregate size, in octets, of all allocation units considered available for reuse
+#SYSTEM_CACHEINFO_SMALLEST_FREE_ITEM=size, in octets, of smallest allocation unit available for reuse
+#SYSTEM_CACHEINFO_LARGEST_FREE_ITEM=size, in octets, of largest allocation unit available for reuse
+SYSTEM_CACHEINFO_FILE_FREE_COUNT=number of allocation units available for reuse
+SYSTEM_CACHEINFO_FILE_FREE_POS=one greater than largest file position known to be allocated
+#SYSTEM_CACHEINFO_MAX_CACHE_SIZE=maximum allowable number of cached Row objects
+#SYSTEM_CACHEINFO_MAX_CACHE_BYTE_SIZE=limit on memory consumption of cached Row objects
+#SYSTEM_CACHEINFO_MULTIPLIER_MASK=binary mask used to calculate indices into row data array
+#SYSTEM_CACHEINFO_WRITER_LENGTH=length of row write buffer array
 # SYSTEM_CATALOGS
 SYSTEM_CATALOGS_TABLE_CAT=catalog name
 # SYSTEM_CLASSPRIVILEGES
@@ -185,8 +188,8 @@ SYSTEM_PROCEDURECOLUMNS_SCALE=scale (# of fractional digits) for number types
 SYSTEM_PROCEDURECOLUMNS_RADIX=Radix of reported numeric precision (i.e. base of number types)
 SYSTEM_PROCEDURECOLUMNS_NULLABLE=can column contain NULL: { No Nulls | Nullable | Unknown }?
 SYSTEM_PROCEDURECOLUMNS_REMARKS=comment describing parameter or result column
-SYSTEM_PROCEDURECOLUMNS_SIGNATURE=typically, (but not limited to) the signature of the Java method providing the SQL procedure entry point
-SYSTEM_PROCEDURECOLUMNS_SEQ=provides the ability to deliver rows in JDBC DataaseMetaData sort contrct order
+SYSTEM_PROCEDURECOLUMNS_SPECIFIC_NAME=typically, (but not limited to) the fully qualified name and signature of the Java method providing the SQL-invoked routine's entry point
+SYSTEM_PROCEDURECOLUMNS_SEQ=provides the ability to deliver rows in JDBC DataseMetaData sort contrct order
 # SYSTEM_PROCEDURES
 SYSTEM_PROCEDURES_PROCEDURE_CAT=catalog in which procedure is defined
 SYSTEM_PROCEDURES_PROCEDURE_SCHEM=schema in which procedure is defined
@@ -197,7 +200,7 @@ SYSTEM_PROCEDURES_NUM_INPUT_PARAMS=number of procedure input parameters
 SYSTEM_PROCEDURES_NUM_OUTPUT_PARAMS=number of procedure output parameters
 SYSTEM_PROCEDURES_NUM_RESULT_SETS=number of result sets returned by procedure (if any)
 SYSTEM_PROCEDURES_ORIGIN=how was named procedure introduced to system?: e.g. { BUILTIN | USER CLASS GRANT | ALIAS | TRIGGER | MODULE | ...}
-SYSTEM_PROCEDURES_SIGNATURE=the signature of the procedure's execution entry point, typically the fully qualified Java method name
+SYSTEM_PROCEDURES_SPECIFIC_NAME=typically, (but not limited to) the fully qualified name and signature of the Java method providing the SQL-invoked routine's entry point
 # SYSTEM_PROPERTIES
 SYSTEM_PROPERTIES_PROPERTY_SCOPE=the scope of the property, e.g. ( TEMPORARY | TRANSACTION | SESSION | ...}
 SYSTEM_PROPERTIES_PROPERTY_NAMESPACE=the namespace in which the property is applicable, e.g. ( database.properties | org.hsqldb.Database | java.sql.DatabaseMetaData | ...)
@@ -207,6 +210,7 @@ SYSTEM_PROPERTIES_PROPERTY_CLASS=the type of the value, e.g. ( int | boolean | j
 # SYSTEM_SCHEMAS
 SYSTEM_SCHEMAS_TABLE_SCHEM=schema name
 SYSTEM_SCHEMAS_TABLE_CATALOG=catalog in which schema is defined
+SYSTEM_SCHEMAS_IS_DEFAULT=whether the described schema is the default schema
 # SYSTEM_SESSIONS
 SYSTEM_SESSIONS_SESSION_ID=session identifier
 SYSTEM_SESSIONS_CONNECTED=time at which session connected to database
@@ -217,6 +221,8 @@ SYSTEM_SESSIONS_READONLY=is session in read-only mode?
 SYSTEM_SESSIONS_MAXROWS=what is the session's MAXROWS setting?
 SYSTEM_SESSIONS_LAST_IDENTITY=what is the last identity value used by this session?
 SYSTEM_SESSIONS_TRANSACTION_SIZE=how many undo items are there in this session's transaction buffer?
+#since 1.8.0
+SYSTEM_SESSIONS_SCHEMA=this session's current default schema
 # SYSTEM_SESSIONINFO
 SYSTEM_SESSIONINFO_KEY=KEY: { SESSION_ID | AUTOCOMMIT | USER | CONNECTION_READONLY | DATABASE_READONLY | MAXROWS | DATABASE | IDENTITY ... }
 SYSTEM_SESSIONINFO_VALUE=VALUE: the value corresponding to the indicated key (see JavaDocs)
@@ -449,3 +455,29 @@ SYSTEM_VIEW_TABLE_USAGE_VIEW_NAME=view identifier
 SYSTEM_VIEW_TABLE_USAGE_TABLE_CATALOG=table catalog name
 SYSTEM_VIEW_TABLE_USAGE_TABLE_SCHEMA=table schema name
 SYSTEM_VIEW_TABLE_USAGE_TABLE_NAME=table identified by a <table name> simply contained in a <table reference> that is contained in the <query expression> of the view being described.
+# Since 1.8.0
+# SYSTEM_AUTHORIZATIONS
+SYSTEM_AUTHORIZATIONS_AUTHORIZATION_NAME=a <role name> or <user identifier>
+SYSTEM_AUTHORIZATIONS_AUTHORIZATION_TYPE=('USER' | 'ROLE') whether the AUTHORIZATION_NAME is a known <user identifier> or is a <role name> defined by a <role definition>.
+# SYSTEM_COLLATIONS
+SYSTEM_COLLATIONS_COLLATION_CATALOG=catalog name of the collation being described
+SYSTEM_COLLATIONS_COLLATION_SCHEMA=unqualified schema name of the collation being described
+SYSTEM_COLLATIONS_COLLATION_NAME=qualified identifier of the collation being described
+SYSTEM_COLLATIONS_PAD_ATTRIBUTE=('NO PAD' | 'PAD SPACE') whether the collation being described has the NO PAD or PAD SPACE characteristic
+SYSTEM_COLLATIONS_COLLATION_TYPE=NULL (deprecated)
+SYSTEM_COLLATIONS_COLLATION_DEFINITION=NULL (deprecated)
+SYSTEM_COLLATIONS_COLLATION_DICTIONARY=NULL (deprecated)
+SYSTEM_COLLATIONS_CHARACTER_REPERTOIRE_NAME=the name of the charater repertoire to which the collation being described is applicable.
+# SYSTEM_ROLE_AUTHORIZATION_DESCRIPTORS
+SYSTEM_ROLE_AUTHORIZATION_DESCRIPTORS_ROLE_NAME=the <role name> of some <role granted> by the <grant role statement> or the <role name> of a <role definition>.
+SYSTEM_ROLE_AUTHORIZATION_DESCRIPTORS_GRANTEE=an <authorization identifier>, possibly PUBLIC, or <role name> specified as a <grantee> contained in a <grant role statement>, or the <authorization identifier> of the current SQLsession when the <role definition> is executed.
+SYSTEM_ROLE_AUTHORIZATION_DESCRIPTORS_GRANTOR=the <authorization identifier> of the user or role who granted the role identified by ROLE_NAME to the user or role identified by the value of GRANTEE.
+# SYSTEM_SCHEMATA
+SYSTEM_SCHEMATA_CATALOG_NAME=the name of the catalog of the described schema
+SYSTEM_SCHEMATA_SCHEMA_NAME=the unqualified schema name of the described schema
+SYSTEM_SCHEMATA_SCHEMA_OWNER=the authorization identifier that owns the schema.
+SYSTEM_SCHEMATA_DEFAULT_CHARACTER_SET_CATALOG=the catalog name of the default character set for columns and domains in the schema.
+SYSTEM_SCHEMATA_DEFAULT_CHARACTER_SET_SCHEMA=the unqualified schema name of the default character set for columns and domains in the schema.
+SYSTEM_SCHEMATA_DEFAULT_CHARACTER_SET_NAME=the qualified identifier of the default character set for columns and domains in the schemata.
+SYSTEM_SCHEMATA_SQL_PATH=the character representation of the schema's <schema path specification>, or null if it cannot be represented without truncation
+
