--- a/base-one/trunk/src/org/hsqldb/resources/sql-error-messages.properties
+++ b/base-one/trunk/src/org/hsqldb/resources/sql-error-messages.properties
@@ -86,7 +86,7 @@
 082=08000 NA
 083=08000 NA
 084=08000 NA
-085=08000 Unexpected exceptin when setting up TLS
+085=08000 Unexpected exception when setting up TLS
 086=08000 NA
 087=08000 NA
 088=08000 NA
