Show how to use the new INVOC_ADDL_ARGS setting

--- a/base-one/trunk/src/org/hsqldb/sample/sample-hsqldb.cfg
+++ b/base-one/trunk/src/org/hsqldb/sample/sample-hsqldb.cfg
@@ -1,4 +1,4 @@
-# $Id: sample-hsqldb.cfg,v 1.4 2004/06/11 04:25:43 unsaved Exp $
+# $Id: sample-hsqldb.cfg,v 1.10 2005/02/25 23:34:30 fredt Exp $
 
 # Sample configuration file for HSQLDB database server.
 # See the "UNIX Quick Start" chapter of the Hsqldb User Guide.
@@ -21,7 +21,7 @@ JAVA_EXECUTABLE=/usr/java/j2sdk1.4.2_02/bin/java
 # Unless you copied a hsqldb.jar file from another system, this typically
 # resides at $HSQLDB_HOME/lib/hsqldb.jar, where $HSQLDB_HOME is your HSQLDB
 # software base directory.
-HSQLDB_JAR_PATH=/home/blaine/hsqldb-dev/lib/hsqldb.jar
+HSQLDB_JAR_PATH=/opt/hsqldb/lib/hsqldb.jar
 
 # Where the file "server.properties" resides.
 SERVER_HOME=/home/blaine/db
@@ -59,9 +59,37 @@ HSQLDB_OWNER=blaine
 # this).
 #AUTH_FILE=/home/blaine/sqltool.rc
 
-# Set to 'WebServer' to start a HSQLDB WebServer instead of a Server.
-# Defaults to 'Server'.
+# Set this to either 'WebServer' or 'Server'.  Defaults to Server.
+# The JVM that is started can invoke many classes (see the following item
+# about that), but this is the Server that is used (1) to check status,
+# (2) to shut down the JVM, (3) to get urlids for #1 from the 
+# server's server/webserver.properties file.
 #TARGET_CLASS=WebServer
+# Note that you don't specify the org.hsqldb package, since you have no 
+# choice in the matter (you can only run org.hsqldb.Server or 
+# org.hsqldb.WebServer).  If you specify additional classes with
+# INVOC_ADDL_ARGUMENTS (described next), you do need to specify the
+# full class name with package name.
+
+# This is where you specify exactly what your HSQLDB JVM will run.
+# The class org.hsqldb.util.MainInvoker will run the TARGET_CLASS
+# specified above + any arguments supplied here + any other classes
+# and arguments.  Every additional class (in addition to the TARGET_CLASS)
+# must be preceded with an empty string, so that MainInvoker will know
+# you are giving a class name.  MainInvoker will invoke the normal 
+# static main(String[]) method of each such class.  
+# By default, MainInvoker will just run TARGET_CLASS with no args.
+# Example that runs just the TARGET_CLASS with the specified arguments:
+#INVOC_ADDL_ARGS='-silent false'
+# Example that runs the TARGET_CLASS plus a WebServer:
+#INVOC_ADDL_ARGS='"" org.hsqldb.WebServer'
+# Note the empty string preceding the class name.
+# Example that starts TARGET_CLASS with an argument, a WebServer, and 
+# your own application with its args (i.e., the HSQLDB Servers are
+# "embedded" in your application):
+#INVOC_ADDL_ARGS='-silent false "" org.hsqldb.WebServer "" com.acme.Stone --env prod localhost'
+# Note that you use nested quotes to group arguments and to specify the
+# empty-string delimiter.
 
 # For TLS encryption for your Server, set these two variables.
 # N.b.:  If you set these, then make this file unreadable to non-root users!!!!
