Sample for running TLS + non-TLS in same JVM

--- a/base-one/trunk/src/org/hsqldb/sample/sample-hsqldb.cfg
+++ b/base-one/trunk/src/org/hsqldb/sample/sample-hsqldb.cfg
@@ -1,4 +1,4 @@
-# $Id: sample-hsqldb.cfg,v 1.10 2005/02/25 23:34:30 fredt Exp $
+# $Id: sample-hsqldb.cfg,v 1.11 2005/06/01 02:42:49 unsaved Exp $
 
 # Sample configuration file for HSQLDB database server.
 # See the "UNIX Quick Start" chapter of the Hsqldb User Guide.
@@ -88,6 +88,9 @@ HSQLDB_OWNER=blaine
 # your own application with its args (i.e., the HSQLDB Servers are
 # "embedded" in your application):
 #INVOC_ADDL_ARGS='-silent false "" org.hsqldb.WebServer "" com.acme.Stone --env prod localhost'
+# Example to run a non-TLS server in same JVM with a TLS server.  In this
+# case, TARGET_CLASS is Server and TLS_KEYSTORE and TLS_PASSWORD are set.
+#INVOC_ADDL_ARGS="'' org.hsqldb.Server -port 9002 -tls false"
 # Note that you use nested quotes to group arguments and to specify the
 # empty-string delimiter.
 
