--- a/base-one/trunk/src/org/hsqldb/sample/sample-hsqldb.cfg
+++ b/base-one/trunk/src/org/hsqldb/sample/sample-hsqldb.cfg
@@ -1,4 +1,4 @@
-# $Id: sample-hsqldb.cfg,v 1.11 2005/06/01 02:42:49 unsaved Exp $
+# $Id: sample-hsqldb.cfg,v 1.12 2005/06/01 12:56:04 unsaved Exp $
 
 # Sample configuration file for HSQLDB database server.
 # See the "UNIX Quick Start" chapter of the Hsqldb User Guide.
@@ -31,6 +31,13 @@ SERVER_HOME=/home/blaine/db
 # Runs as root by default, but you should take the time to set database file
 # ownerships to another user and set that user name here.
 HSQLDB_OWNER=blaine
+
+# The HSQLDB jar file specified in HSQLDB_JAR_PATH above will automatically
+# be in the class path.  This arg specifies additional classpath elements.
+# To embed your own application, add your jar file(s) or class base
+# directories here, and add your main class to the INVOC_ADDL_ARGS setting
+# below.
+SERVER_ADDL_CLASSPATH=/usr/local/dist/currencybank.jar
 
 # We require all Server/WebServer instances to be accessible within 
 # $MAX_START_SECS from when the Server/WebServer is started.
@@ -73,7 +80,7 @@ HSQLDB_OWNER=blaine
 
 # This is where you specify exactly what your HSQLDB JVM will run.
 # The class org.hsqldb.util.MainInvoker will run the TARGET_CLASS
-# specified above + any arguments supplied here + any other classes
+# specified above with any arguments supplied here + any other classes
 # and arguments.  Every additional class (in addition to the TARGET_CLASS)
 # must be preceded with an empty string, so that MainInvoker will know
 # you are giving a class name.  MainInvoker will invoke the normal 
@@ -84,12 +91,14 @@ HSQLDB_OWNER=blaine
 # Example that runs the TARGET_CLASS plus a WebServer:
 #INVOC_ADDL_ARGS='"" org.hsqldb.WebServer'
 # Note the empty string preceding the class name.
-# Example that starts TARGET_CLASS with an argument, a WebServer, and 
+# Example that starts TARGET_CLASS with an argument + a WebServer +
 # your own application with its args (i.e., the HSQLDB Servers are
-# "embedded" in your application):
+# "embedded" in your application).  (Set SERVER_ADDL_CLASSPATH too).:
 #INVOC_ADDL_ARGS='-silent false "" org.hsqldb.WebServer "" com.acme.Stone --env prod localhost'
 # Example to run a non-TLS server in same JVM with a TLS server.  In this
-# case, TARGET_CLASS is Server and TLS_KEYSTORE and TLS_PASSWORD are set.
+# case, TARGET_CLASS is Server which will run in TLS mode by virtue of 
+# setting TLS_KEYSTORE and TLS_PASSWORD above.  The "additional" Server
+# here overrides the 'tls' and 'port' settings:
 #INVOC_ADDL_ARGS="'' org.hsqldb.Server -port 9002 -tls false"
 # Note that you use nested quotes to group arguments and to specify the
 # empty-string delimiter.
