--- a/base-one/trunk/src/org/hsqldb/sample/sample-hsqldb.cfg
+++ b/base-one/trunk/src/org/hsqldb/sample/sample-hsqldb.cfg
@@ -1,4 +1,4 @@
-# $Id: sample-hsqldb.cfg,v 1.12 2005/06/01 12:56:04 unsaved Exp $
+# $Id: sample-hsqldb.cfg,v 1.13 2005/06/01 14:27:37 unsaved Exp $
 
 # Sample configuration file for HSQLDB database server.
 # See the "UNIX Quick Start" chapter of the Hsqldb User Guide.
@@ -75,7 +75,7 @@ SERVER_ADDL_CLASSPATH=/usr/local/dist/currencybank.jar
 # Note that you don't specify the org.hsqldb package, since you have no 
 # choice in the matter (you can only run org.hsqldb.Server or 
 # org.hsqldb.WebServer).  If you specify additional classes with
-# INVOC_ADDL_ARGUMENTS (described next), you do need to specify the
+# INVOC_ADDL_ARGS (described next), you do need to specify the
 # full class name with package name.
 
 # This is where you specify exactly what your HSQLDB JVM will run.
