--- a/base-one/trunk/src/org/hsqldb/resources/sql-error-messages.properties
+++ b/base-one/trunk/src/org/hsqldb/resources/sql-error-messages.properties
@@ -1,6 +1,6 @@
 # Copyright 2005 HSQL Developers Group
 # can be distributed and used according to HSQLDB License
-# see http://hsqldb.sourceforge.net
+# see http://hsqldb.org
 000=NOT USED
 001=08001 The database is already in use by another process
 002=08003 Connection is closed
