Comment out a setting that will most often not be used (this is in keeping with general rule of which settings are commented out in this sample file).

--- a/base-one/trunk/src/org/hsqldb/sample/sample-hsqldb.cfg
+++ b/base-one/trunk/src/org/hsqldb/sample/sample-hsqldb.cfg
@@ -1,4 +1,4 @@
-# $Id: sample-hsqldb.cfg,v 1.13 2005/06/01 14:27:37 unsaved Exp $
+# $Id: sample-hsqldb.cfg,v 1.14 2005/06/01 22:24:50 unsaved Exp $
 
 # Sample configuration file for HSQLDB database server.
 # See the "UNIX Quick Start" chapter of the Hsqldb User Guide.
@@ -37,7 +37,7 @@ HSQLDB_OWNER=blaine
 # To embed your own application, add your jar file(s) or class base
 # directories here, and add your main class to the INVOC_ADDL_ARGS setting
 # below.
-SERVER_ADDL_CLASSPATH=/usr/local/dist/currencybank.jar
+#SERVER_ADDL_CLASSPATH=/usr/local/dist/currencybank.jar
 
 # We require all Server/WebServer instances to be accessible within 
 # $MAX_START_SECS from when the Server/WebServer is started.
