Change defaults so this file will work exactly as-is with HSQLDB distros for UNIX

--- a/base-one/trunk/src/org/hsqldb/sample/sample-hsqldb.cfg
+++ b/base-one/trunk/src/org/hsqldb/sample/sample-hsqldb.cfg
@@ -1,4 +1,4 @@
-# $Id: sample-hsqldb.cfg,v 1.14 2005/06/01 22:24:50 unsaved Exp $
+# $Id: sample-hsqldb.cfg,v 1.15 2005/07/23 19:54:17 unsaved Exp $
 
 # Sample configuration file for HSQLDB database server.
 # See the "UNIX Quick Start" chapter of the Hsqldb User Guide.
@@ -16,7 +16,7 @@
 
 # Thanks to Meikel Bisping for his contributions.  -- Blaine
 
-JAVA_EXECUTABLE=/usr/java/j2sdk1.4.2_02/bin/java
+JAVA_EXECUTABLE=/usr/bin/java
 
 # Unless you copied a hsqldb.jar file from another system, this typically
 # resides at $HSQLDB_HOME/lib/hsqldb.jar, where $HSQLDB_HOME is your HSQLDB
@@ -24,13 +24,13 @@ JAVA_EXECUTABLE=/usr/java/j2sdk1.4.2_02/bin/java
 HSQLDB_JAR_PATH=/opt/hsqldb/lib/hsqldb.jar
 
 # Where the file "server.properties" resides.
-SERVER_HOME=/home/blaine/db
+SERVER_HOME=/opt/hsqldb/data
 
 # What UNIX user the server will run as.
 # (The shutdown client is always run as root or the invoker of the init script).
 # Runs as root by default, but you should take the time to set database file
 # ownerships to another user and set that user name here.
-HSQLDB_OWNER=blaine
+HSQLDB_OWNER=hsqldb
 
 # The HSQLDB jar file specified in HSQLDB_JAR_PATH above will automatically
 # be in the class path.  This arg specifies additional classpath elements.
