--- a/base-one/trunk/src/org/hsqldb/sample/sqltool.rc
+++ b/base-one/trunk/src/org/hsqldb/sample/sqltool.rc
@@ -1,4 +1,4 @@
-# $Id: sqltool.rc,v 1.14 2005/05/22 04:46:16 unsaved Exp $
+# $Id: sqltool.rc,v 1.15 2005/09/18 23:59:37 unsaved Exp $
 
 # This is a sample RC configuration file used by SqlTool, DatabaseManager,
 # and any other program that uses the org.hsqldb.util.RCData class.
@@ -79,7 +79,10 @@ password
 #driver com.mysql.jdbc.Driver
 
 # Template for a Microsoft SQL Server database
-url jdbc:microsoft:sqlserver://hostname;DatabaseName=DbName
+url jdbc:microsoft:sqlserver://hostname;DatabaseName=DbName;SelectMethod=Cursor
+# The SelectMethod setting is required to do more than one thing on a JDBC
+# session (I guess Microsoft thought nobody would really use Java for 
+# anything other than a "hello world" program).
 # This is for Microsoft's SQL Server 2000 driver (requires mssqlserver.jar
 # and msutil.jar).
 driver com.microsoft.jdbc.sqlserver.SQLServerDriver
