--- a/base-one/trunk/src/org/hsqldb/resources/sql-error-messages.properties
+++ b/base-one/trunk/src/org/hsqldb/resources/sql-error-messages.properties
@@ -202,8 +202,8 @@
 198=S1000 Error calling function
 199=27000 Triggered data change violation
 200=37000 Invalid argument
-201=S1000 Internal Error : Unknown SQL Statement Type:
-202=S1000 Internal Error : Unknown Session Operation Type:
+201=S1000 Internal Error : Unsupported internal operation in:
+202=NA
 203=S1000 prepared statement is no longer valid
 204=parsing trigger command\u0020
 205=S3000 trigger or function not in path
