--- a/base-one/trunk/src/org/hsqldb/resources/sql-error-messages.properties
+++ b/base-one/trunk/src/org/hsqldb/resources/sql-error-messages.properties
@@ -106,7 +106,7 @@
 102=duplicate column in list
 103=table has no primary key
 104=23000 Unique constraint violation
-105=missing DEFAULT value on column $$
+105=S0021 missing DEFAULT value on column $$
 106=S1000 NULL value as BOOLEAN
 107=attempt to connect while db opening /closing
 108=NA
@@ -198,7 +198,7 @@
 194=23000 Table is referenced by view
 195=NA
 196=S1000 Text source file already exists
-197=23000 Column is referenced in constraint
+197=23000 Column is referenced in constraint or view
 198=S1000 Error calling function
 199=27000 Triggered data change violation
 200=37000 Invalid argument
