post 1_8_0_3 changes sync

--- a/base-one/trunk/src/org/hsqldb/resources/sql-error-messages.properties
+++ b/base-one/trunk/src/org/hsqldb/resources/sql-error-messages.properties
@@ -107,7 +107,7 @@
 103=table has no primary key
 104=23000 Unique constraint violation
 105=S0021 missing DEFAULT value on column $$
-106=S1000 NULL value as BOOLEAN
+106=S1000 Not a condition
 107=attempt to connect while db opening /closing
 108=NA
 109=NA
@@ -128,8 +128,8 @@
 124=22001 Value too long
 125=00000 Quoted identifier required
 126=00000 Statement is closed
-127=Method skipBytes() not yet implemented.
-128=Method readLine() not yet implemented.
+127=NA
+128=NA
 129=S1000 Data File input/output error
 130=NA
 131=null string
@@ -153,7 +153,7 @@
 149=Invalid address : $$
 150=22001 Header not allowed or too long
 151=NA
-152=not implemented
+152=NA
 153=00000 LIMIT or TOP not allowed
 154=00000 Statement does not generate a row count
 155=00000 Statement does not generate a result set
