--- a/base-one/trunk/src/org/hsqldb/resources/org_hsqldb_Server_messages.properties
+++ b/base-one/trunk/src/org/hsqldb/resources/org_hsqldb_Server_messages.properties
@@ -11,7 +11,7 @@ server.help = Usage: java org.hsqldb.Server [options]\n\
 | -dbname.i      | alias       | --       | url alias for database i     |\n\
 | -silent        | true|false  | true     | false => display all queries |\n\
 | -trace         | true|false  | false    | display JDBC trace messages  |\n\
-| -tls           | true|false  | false    | TLS/SSL (secure) sockets     |\n\
+| -tls           | true|false> | false    | TLS/SSL (secure) sockets     |\n\
 | -no_system_exit| true|false  | false    | do not issue System.exit()   |\n\
 +----------------+-------------+----------+------------------------------+\n\
 \n\
