--- a/base-one/trunk/src/org/hsqldb/resources/sql-error-messages.properties
+++ b/base-one/trunk/src/org/hsqldb/resources/sql-error-messages.properties
@@ -139,7 +139,7 @@
 135=properties name is null or empty
 136=Server certificate has no Common Name
 137=Server certificate has empty Common Name
-138=Unknown JDBC escape sequence: {
+138=Unknown JDBC escape sequence: {$$
 139=Certificate Common Name[$$] does not match host name[$$]
 140=NA
 141=NA
